Fri Dec  4 01:20:06 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (gtk_clist_button_release): call toggle_row with
	valid row numbers only
	(toggle_row): check if clist_row != NULL

Fri Dec  4 00:50:12 1998  Lars Hamann  <lars@gtk.org>

	* gtk/gtkctree.c (gtk_ctree_export_to_gnode): fixed for-loop.

	* gtk/gtkclist.c 
	(gtk_clist_set_column_visibility)
	(gtk_clist_column_titles_active)
 	(gtk_clist_column_titles_active)
	(gtk_clist_column_title_passive)
 	(gtk_clist_column_title_active): few additional tests whether
 	column->button != NULL

Thu Dec  3 16:49:18 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (DROP_ABORT_TIME): Changed to 5 min
	from 10 seconds, so it doesn't abort while users
	have an ACTION_ASK menu up.

	* gtk/gtkdnd.c: Hide the icon window between sending a a 
	drop event to the destination and displaying the
	snapback animation, so that it doesn't hang around
	during ACTION_ASK.

Thu Dec  3 16:37:42 1998  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkclist.c (get_cell_style): Use GTK_STATE_INSENSITIVE
	for the foreground of cells for CLists in the insensitive
	state, instead of GTK_STATE_PRELIGHT.

Thu Dec  3 06:20:59 1998  Tim Janik  <timj@gtk.org>

	* gtk/gtkwindow.c: moved checks upon focus setting from
 	gtk_window_real_set_focus to gtk_window_set_focus, so we don't
	emit the signal if unneccessary.

	* gtk/gtkwidget.c (gtk_widget_grab_focus): clear up the old focus
	containers when grabbing focus on a new widget. this is based on
	a patch from Alexis Mikhailov, submitted to gtk-list on 4 Nov 1998.

	* gtk/gtkclist.c (gtk_clist_focus_out): set CLIST_CHILD_HAS_FOCUS
	flag, so we take the buttons into consideration upon the next focus
	request.

	* gtk/gtkcontainer.c (gtk_container_set_focus_child): fixed an
 	assertment.

Wed Dec  2 17:45:21 CST 1998 Shawn T. Amundson <amundson@gtk.org>

	* gtk/gtkpixmap.c: Fixes for low-color displays and a slight
	  enhancement for true-color displays.

	* INSTALL:
	  README: